[FIX] For mobile phones use one column layout + don't use overflow

--- a/app/assets/stylesheets/infinite-scroll.sass
+++ b/app/assets/stylesheets/infinite-scroll.sass
@@ -1,15 +1,35 @@
-.infinite-scroll-box
-  position: absolute
-  top: 50px
-  left: 0
-  right: 0
-  bottom: 0
-  overflow-y: scroll
-  overflow-x: hidden
+@media all and (min-width: 800px)
 
-.ember-animated-container
-  position: fixed
-  bottom: 0px
+  .infinite-scroll-box
+    position: absolute
+    top: 50px
+    left: 0
+    right: 0
+    bottom: 0
+    overflow-y: scroll
+    overflow-x: hidden
 
-.infinite-scroll-content
-  padding-bottom: 20px
+  .ember-animated-container
+    position: fixed
+    bottom: 0px
+
+  .infinite-scroll-content
+    padding-bottom: 20px
+
+.desktop
+
+  .infinite-scroll-box
+    position: absolute
+    top: 50px
+    left: 0
+    right: 0
+    bottom: 0
+    overflow-y: scroll
+    overflow-x: hidden
+
+  .ember-animated-container
+    position: fixed
+    bottom: 0px
+
+  .infinite-scroll-content
+    padding-bottom: 20px
